--- a/123.html
+++ b/123.html
@@ -61,9 +61,9 @@
 <body>
 
 <div id="introScreen">
-  <h2>Chúc mừng kỷ niệm 100 ngày yêu nhau anh iu💕</h2>
-  <h3>Bắp cute 💕BBi Chan</h3>
-  <div>Mật khẩu là dãy số "ngày tháng năm bắt đầu yêu_ngày tháng năm mình lần đầu tiên gặp nhau nha 💕</div>
+  <h2>bạn click vô là mất tiền đó💕</h2>
+  <h3>bạn click vô là mất tiền đó</h3>
+  <div>bạn click vô là mất tiền đó 💕</div>
   <div>Gợi ý: Gồm 9 chữ số </div>
   <input type="password" id="passInput" placeholder="Nhập mật khẩu" />
   <button id="startBtn">Mở bất ngờ nào</button>
@@ -334,3 +334,4 @@ startBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
+
